# fae

./: .gitignore  README.md  bunfig.toml  package-lock.json  package.json  tsconfig.base.json
apps/daemon/: drizzle.config.ts  package.json  tsconfig.json
apps/daemon/src/: daemon.ts  types.ts
apps/daemon/src/api/: agents.ts  (+6 more)
apps/fae-agent/: .gitignore  Cargo.toml  README.md  local.db-shm  original_backup.rs  package.json  rust-toolchain.toml  temp_function.rs
apps/fae-agent/migrations/: 001_initial_schema.sql  002_add_updated_at_to_agents.sql  003_add_allowed_folders.sql
apps/fae-agent/skills/: file-read.ts  shell-exec.ts  web-search.ts
apps/fae-agent/src/: agents_api.rs  api.rs  config.rs  main.rs  models.rs  services.rs  services.rs-n  services_test.rs  unit_tests.rs
apps/fae-agent/src/migrations/: 001_initial_schema.sql
apps/fae-agent/src/models/: folders.rs  providers.rs  system_settings.rs
apps/fae-agent/src/services/: ai_chat.rs  auth.rs  folders_api.rs  llm.rs  providers.rs  providers_api.rs  providers_test.rs  services.rs  skills.rs  skills_api.rs  system_settings_api.rs
apps/fae-agent/src/services/llm/: client.rs  context.rs  folder_validator.rs  log.rs  memory.rs  mod.rs  models.rs  ollama.rs  openai.rs  prompt_builder.rs  service.rs  system_context.rs  tool_executor.rs  tools.rs  utils.rs
apps/web/: .env.example  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx
apps/web/components/: app-shell.tsx
apps/web/lib/: api.ts  session.ts
skills/core/: file-read.ts  shell-exec.ts  web-search.ts
(+37 files in other folders)
