[package]
name = "fae-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fae-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
anyhow = "1.0"
thiserror = "1.0"
dotenvy = "0.15"
futures = "0.3"
tokio-tungstenite = "0.24"
regex = "1.0"
rand = "0.8"
async-stream = "0.3"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
reqwest-eventsource = "0.5"
async-trait = "0.1"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.26.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"